add SD-latent-mirroring extension

--- a/ipynb/OneClick-install-extensions.ipynb
+++ b/ipynb/OneClick-install-extensions.ipynb
@@ -101,7 +101,7 @@
     "tags": []
    },
    "source": [
-    "## <i class=\"fa fa-language\"></i> 安装depthmap2mask（深度图遮罩）拓展（可选）"
+    "## 安装depthmap2mask（深度图遮罩）拓展（可选）"
    ]
   },
   {
@@ -131,7 +131,7 @@
    "id": "df58e3fb-1f1b-48a2-8640-97578904cff0",
    "metadata": {},
    "source": [
-    "## <i class=\"fa fa-language\"></i> 安装高分辨率修复原图调节拓展（可选）"
+    "## 安装高分辨率修复原图调节拓展（可选）"
    ]
   },
   {
@@ -159,9 +159,11 @@
   {
    "cell_type": "markdown",
    "id": "f4da2910-02c8-4a18-9569-da8f6d0f54f4",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "## <i class=\"fa fa-language\"></i> 安装Dreambooth拓展（可选）"
+    "## <i class=\"fa fa-bed\"></i> 安装Dreambooth拓展（可选）"
    ]
   },
   {
@@ -183,6 +185,39 @@
     "\n",
     "extURL='https://github.com/d8ahazard/sd_dreambooth_extension'\n",
     "extFileSize=7413077\n",
+    "\n",
+    "install(extURL,extFileSize)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d654dd23-375f-486b-92fd-eaae7986a2b8",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## 安装SD-latent-mirroring（镜像潜空间图像）拓展（可选）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51b17a60-fdfc-4a0a-83a7-441ec260e11d",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import os,sys\n",
+    "sys.path.append('../') # 把上级路径也加入到系统路径中，这样就能够找到func\n",
+    "from func.extensionsInstaller import install\n",
+    "from urllib.parse import urlparse\n",
+    "\n",
+    "extURL='https://github.com/dfaker/SD-latent-mirroring'\n",
+    "extFileSize=58979\n",
     "\n",
     "install(extURL,extFileSize)"
    ]
