add move cache to start.ipynb

--- a/start.ipynb
+++ b/start.ipynb
@@ -91,10 +91,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57b1b901-e2bb-408f-a4a4-daec891b2c35",
+   "id": "21dba517-304a-4773-9012-3728af317638",
+   "metadata": {},
+   "source": [
+    "# <i class=\"fa fa-running\"></i> 移动.cache路径，并构建软链接————从根目录到autodl-tmp\n",
+    "因为默认的系统盘只有25G，如果装上各种拓展和模型，第一次运行webUI的时候，会下载huggingface的相关模型到根目录中的.cache目录下，而且这是一个隐藏目录，无法通过GUI界面管理文件，随着webUI的运行（生成的图片足够多，不知道为何也会增加.cache的占用），系统盘很快就塞爆，所以建议首先把.cache移动到autodl-tmp目录下，这里有50G的空间，而且这样做也方便当机器被占用时进行跨实例拷贝数据"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac532e3b-e4a7-4779-b41b-042c89c80d94",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
+   "outputs": [],
+   "source": [
+    "%run ./ipynb/moveCache-root-to-autodl-tmp.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57b1b901-e2bb-408f-a4a4-daec891b2c35",
+   "metadata": {},
    "source": [
     "# <i class=\"fa fa-download\"></i> 下载模型与VAE\n",
     "在默认的网络环境下模型与VAE的拉取速度足够快，也方便更新和替换新的模型，且镜像部署完成之后再下载，好处是在于镜像总体包体小，重置速度快，抢占显卡资源也能领先一步"
@@ -105,11 +127,13 @@
    "execution_count": null,
    "id": "7f82ddd8-ca59-4afa-8c92-b60c209a7bb0",
    "metadata": {
-    "tags": []
+    "jupyter": {
+     "source_hidden": true
+    }
    },
    "outputs": [],
    "source": [
-    "# %run ./ipynb/wgetDownloadModels.ipynb"
+    "%run ./ipynb/wgetDownloadModels.ipynb"
    ]
   },
   {
