change "rm -f" to "rm -rf"

--- a/ipynb/moveCache-autodl-tmp-to-root.ipynb
+++ b/ipynb/moveCache-autodl-tmp-to-root.ipynb
@@ -68,7 +68,7 @@
     "if os.path.islink(originDir)==True:\n",
     "    print('根目录下的.cache是软连接，因此进行删除')\n",
     "    realPath=os.readlink(originDir)\n",
-    "    !rm -f $originDir\n",
+    "    !rm -rf $originDir\n",
     "    print('把autodl-tmp目录下的.cache移动到根目录')\n",
     "    !mv $realPath $originDir # 移动文件\n",
     "    display(successBTN)\n",
