--- a/ipynb/moveCache-root-to-autodl-tmp.ipynb
+++ b/ipynb/moveCache-root-to-autodl-tmp.ipynb
@@ -78,7 +78,7 @@
     "        display(alreadyBTN)\n",
     "else:\n",
     "    print('目标路径已经存在，因此删除系统盘中的.cache')\n",
-    "    !rm -f $originDir\n",
+    "    !rm -rf $originDir\n",
     "    !ln -s $targetDir $originDir # 建立软连接"
    ]
   }
