add sd extensions auto update

--- a/start.ipynb
+++ b/start.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6e5dde11-3f7f-4de4-adaa-0b4789b43e4f",
    "metadata": {
     "jupyter": {
@@ -21,7 +21,106 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d5aa72e8bb8241aaa9a3c29c2ec208d6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='info', description='在使用【内蒙】代理', style=ButtonStyle(), tooltip='请点击下方的区名')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f000bd1f5b9844cc919d3feab4fe54cd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='芜湖', style=ButtonStyle(), tooltip='Click me')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0d9f5bc615984302bec58e78877e60f0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='北京', style=ButtonStyle(), tooltip='Click me')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a4ad8dc1390c49e591feecd5f796b183",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='success', description='内蒙', icon='check', style=ButtonStyle(), tooltip='Click me')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7d8513c0bbb945dc80d970fa9ef652c5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='泉州', style=ButtonStyle(), tooltip='Click me')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "da09dd621f01430aa3fe6d6a074c85d2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='南京', style=ButtonStyle(), tooltip='Click me')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8d6a5ac104cb4c7e93e2cb1f65a27282",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='佛山', style=ButtonStyle(), tooltip='Click me')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from func.env import setProxy\n",
     "cb=setProxy()\n",
@@ -49,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "00dd9b50-bdfe-4b88-8c94-acd210229c98",
    "metadata": {
     "jupyter": {
@@ -58,7 +157,15 @@
     "scrolled": true,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Already up to date.\n"
+     ]
+    }
+   ],
    "source": [
     "!{proxy} &&\\\n",
     "cd /root/OneClick-stable-diffusion/ &&\\\n",
@@ -76,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b0c35408-f527-40a4-a8b0-6adfddc92a26",
    "metadata": {
     "jupyter": {
@@ -84,9 +191,76 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/root/stable-diffusion-webui\n",
+      "目标路径已经存在，因此删除系统盘中的SD\n"
+     ]
+    }
+   ],
    "source": [
     "%run ./ipynb/moveSD-root-to-autodl-tmp.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f3d234f-bdb5-4277-ac67-d1715f086e22",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# <i class=\"fa fa-download\"></i> 更新SD拓展"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0583c1c-3f42-4ddb-8e35-ea71860f487d",
+   "metadata": {},
+   "source": [
+    "更新stable-diffusion-webui/extensions目录下所有拓展"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3b09a11d-453a-411e-8a25-67a8a7e9d039",
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Already up to date.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "error: Your local changes to the following files would be overwritten by merge:\n",
+      "\tREADME.md\n",
+      "Please commit your changes or stash them before you merge.\n",
+      "Aborting\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updating 8f0dcd6..3c1874f\n",
+      "Already up to date.\n",
+      "Already up to date.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run ./ipynb/OneClick-update-extensions.ipynb"
    ]
   },
   {
@@ -100,15 +274,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ac532e3b-e4a7-4779-b41b-042c89c80d94",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/root/.cache\n",
+      "目标路径已经存在，因此删除系统盘中的.cache\n"
+     ]
+    }
+   ],
    "source": [
     "%run ./ipynb/moveCache-root-to-autodl-tmp.ipynb"
    ]
