--- a/ipynb/moveSD-root-to-autodl-tmp.ipynb
+++ b/ipynb/moveSD-root-to-autodl-tmp.ipynb
@@ -54,7 +54,7 @@
     "        display(alreadyBTN)\n",
     "else:\n",
     "    print('目标路径已经存在，因此删除系统盘中的SD')\n",
-    "    !rm -f $originDir"
+    "    !rm -rf $originDir"
    ]
   }
  ],
