update extensions update def

--- a/ipynb/OneClick-install-extensions.ipynb
+++ b/ipynb/OneClick-install-extensions.ipynb
@@ -106,22 +106,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4d19aa84-c880-436e-a082-4c785f7d97a4",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fa991837940e45d7b163414ae6c6cca7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='安装拓展', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "拓展文件夹体积大小：105495\n"
+     ]
+    }
+   ],
    "source": [
     "import os,sys\n",
     "sys.path.append('../') # 把上级路径也加入到系统路径中，这样就能够找到func\n",
     "from func.extensionsInstaller import install\n",
     "\n",
     "extURL='https://github.com/Extraltodeus/depthmap2mask'\n",
-    "extFileSize=94941\n",
+    "extFileSize=105495\n",
     "\n",
     "install(extURL,extFileSize)"
    ]
