optional parameter for forcing a reinstall

--- a/ipynb/OneClick-install-extensions.ipynb
+++ b/ipynb/OneClick-install-extensions.ipynb
@@ -13,6 +13,7 @@
    "cell_type": "markdown",
    "id": "e8ece6d4-3423-4815-bff9-e5ed9d3b35d6",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -24,9 +25,6 @@
    "execution_count": null,
    "id": "03beeabc-da55-47bb-95ef-9675127ee7ca",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -142,7 +140,7 @@
     "extURL='https://github.com/Extraltodeus/depthmap2mask'\n",
     "extFileSize=0\n",
     "\n",
-    "install(extURL,extFileSize)"
+    "install(extURL, extFileSize, forceReinstall=True)"
    ]
   },
   {
@@ -158,9 +156,6 @@
    "execution_count": null,
    "id": "af86bebd-53c3-4e62-ab28-5ff740deb418",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -172,7 +167,7 @@
     "extURL='https://github.com/klimaleksus/stable-diffusion-webui-conditioning-highres-fix'\n",
     "extFileSize=48653\n",
     "\n",
-    "install(extURL,extFileSize)"
+    "install(extURL, extFileSize, forceReinstall=True)"
    ]
   },
   {
@@ -190,9 +185,6 @@
    "execution_count": null,
    "id": "0e8993e1-9e76-458c-8fd5-f2bf27ee841c",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -205,7 +197,7 @@
     "extURL='https://github.com/d8ahazard/sd_dreambooth_extension'\n",
     "extFileSize=7413077\n",
     "\n",
-    "install(extURL,extFileSize)"
+    "install(extURL, extFileSize, forceReinstall=True)"
    ]
   },
   {
@@ -223,9 +215,6 @@
    "execution_count": null,
    "id": "51b17a60-fdfc-4a0a-83a7-441ec260e11d",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -238,7 +227,7 @@
     "extURL='https://github.com/dfaker/SD-latent-mirroring'\n",
     "extFileSize=58979\n",
     "\n",
-    "install(extURL,extFileSize)"
+    "install(extURL, extFileSize, forceReinstall=True)"
    ]
   }
  ],
