add temp to .gitignore

--- a/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "875e96c2-0706-4e04-813c-bf4a02a40017",
    "metadata": {
     "execution": {
@@ -90,7 +90,8 @@
     "    os.makedirs(temp_folder)\n",
     "\n",
     "# 覆盖下载 fast-DreamBooth.ipynb 文件到 temp 文件夹中\n",
-    "fastDreamBoothPath = os.path.join(temp_folder, 'fast-DreamBooth.ipynb')\n",
+    "file_name='fast-DreamBooth.ipynb'\n",
+    "fastDreamBoothPath = os.path.join(temp_folder, file_name)\n",
     "if os.path.exists(fastDreamBoothPath):\n",
     "    os.remove(fastDreamBoothPath)\n",
     "fastDreamBoothPath = wget.download(\n",
@@ -101,16 +102,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "25fbefc9-7c37-48bb-97e1-4fef802fc9af",
+   "metadata": {},
+   "source": [
+    "# 清理Notebook中的输出，对Colab版中的路径进行替换，以适应openbayes的路径"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "id": "73aec890-1745-4f77-b3bc-af98d1726554",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-12T12:35:30.005881Z",
-     "iopub.status.busy": "2022-12-12T12:35:30.005489Z",
-     "iopub.status.idle": "2022-12-12T12:35:30.014815Z",
-     "shell.execute_reply": "2022-12-12T12:35:30.014342Z",
-     "shell.execute_reply.started": "2022-12-12T12:35:30.005854Z"
+     "iopub.execute_input": "2022-12-12T14:05:10.071819Z",
+     "iopub.status.busy": "2022-12-12T14:05:10.071348Z",
+     "iopub.status.idle": "2022-12-12T14:05:10.080367Z",
+     "shell.execute_reply": "2022-12-12T14:05:10.079919Z",
+     "shell.execute_reply.started": "2022-12-12T14:05:10.071799Z"
     },
     "tags": []
    },
@@ -183,65 +192,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 81,
-   "id": "1f98c0df-b75b-4bf3-ad0f-7181fd4f87f1",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-12-12T12:47:34.137869Z",
-     "iopub.status.busy": "2022-12-12T12:47:34.137577Z",
-     "iopub.status.idle": "2022-12-12T12:47:34.145076Z",
-     "shell.execute_reply": "2022-12-12T12:47:34.144668Z",
-     "shell.execute_reply.started": "2022-12-12T12:47:34.137851Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "640d9bdb-e926-428d-8ccf-38eacf11ed38",
+   "metadata": {},
    "source": [
-    "import json\n",
-    "\n",
-    "def update_ipynb_vars(ipynb_file, var_map):\n",
-    "  with open(ipynb_file, 'r') as f:\n",
-    "    notebook = json.load(f)\n",
-    "  \n",
-    "  # Replace variable assignments with updated values\n",
-    "  for cell in notebook['cells']:\n",
-    "    if cell['cell_type'] == 'code':\n",
-    "      for i in range(len(cell['source'])):\n",
-    "        for var, val in var_map.items():\n",
-    "          if isinstance(val, str):\n",
-    "            val = f'\"{val}\"'\n",
-    "          if cell['source'][i].startswith(f'{var} = '):\n",
-    "            cell['source'][i] = f'{var} = {val}\\n'\n",
-    "\n",
-    "  # Write updated notebook to file\n",
-    "  with open(ipynb_file, 'w') as f:\n",
-    "    json.dump(notebook, f)\n",
-    "\n",
-    "\n",
-    "replacements = {\n",
-    "  'Model_Version': 'V2.1-768px',\n",
-    "  'Session_Name': 'FuXingHao768',\n",
-    "  'Crop_size': 768\n",
-    "}\n",
-    "\n",
-    "update_ipynb_vars(newNotebookPath, replacements)\n",
-    "\n",
-    "  \n",
-    "    "
+    "# 对指定的变量名进行字符串和参数的替换"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "cdea68b7-983a-4341-8fed-a2ac19e8fffb",
+   "execution_count": 24,
+   "id": "1f98c0df-b75b-4bf3-ad0f-7181fd4f87f1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-12T12:10:54.597108Z",
-     "iopub.status.busy": "2022-12-12T12:10:54.596665Z",
-     "iopub.status.idle": "2022-12-12T12:10:54.604254Z",
-     "shell.execute_reply": "2022-12-12T12:10:54.603821Z",
-     "shell.execute_reply.started": "2022-12-12T12:10:54.597086Z"
+     "iopub.execute_input": "2022-12-12T14:08:11.254272Z",
+     "iopub.status.busy": "2022-12-12T14:08:11.253997Z",
+     "iopub.status.idle": "2022-12-12T14:08:11.261991Z",
+     "shell.execute_reply": "2022-12-12T14:08:11.261526Z",
+     "shell.execute_reply.started": "2022-12-12T14:08:11.254253Z"
     },
     "tags": []
    },
@@ -250,7 +218,99 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model_Version: \"1.5\" #@param [ \"1.5\", \"V2.1-512px\", \"V2.1-768px\"]\n",
+      "#@param [ \"1.5\", \"V2.1-512px\", \"V2.1-768px\"]\n",
+      "\n",
+      "#@param{type: \"string\"}\n",
+      "\n",
+      "#@param [ \"1.5\", \"V2.1-512px\", \"V2.1-768px\"]\n",
+      "\n",
+      "#@param [\"512\", \"576\", \"640\", \"704\", \"768\", \"832\", \"896\", \"960\", \"1024\"]\n",
+      "\n",
+      "None\n",
+      "#@param [\"1.5\", \"V2.1-512\", \"V2.1-768\"]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "def keepAnnotationBehide(line):\n",
+    "  identifier=\"#@param\"\n",
+    "  if identifier in line:\n",
+    "    annotation=line.split(identifier)[1]\n",
+    "    return identifier+annotation\n",
+    "\n",
+    "def modify_file_name(file_path):\n",
+    "  # 获取文件名和文件扩展名\n",
+    "  file_name, file_ext = os.path.splitext(file_path)\n",
+    "  # 在文件名后加上 -modified\n",
+    "  modified_file_path = file_name + \"-customData\" + file_ext\n",
+    "  return modified_file_path\n",
+    "\n",
+    "# 读取修改后的notebook\n",
+    "def update_ipynb_vars(ipynb_file, var_map):\n",
+    "  with open(ipynb_file, 'r') as f:\n",
+    "    notebook = json.load(f)\n",
+    "  \n",
+    "  # 用更新后的值替换变量赋值\n",
+    "  for cell in notebook['cells']:\n",
+    "    if cell['cell_type'] == 'code':\n",
+    "      for i in range(len(cell['source'])):\n",
+    "        for var, val in var_map.items():\n",
+    "          if isinstance(val, str):\n",
+    "            val = f'\"{val}\"'\n",
+    "          if cell['source'][i].startswith(f'{var} = '):\n",
+    "            annotation=keepAnnotationBehide(cell['source'][i])\n",
+    "            cell['source'][i] = f'{var} = {val} {annotation}\\n' \n",
+    "\n",
+    "\n",
+    "  # 保存修改后的notebook\n",
+    "  updatedDataNotebookPath=modify_file_name(ipynb_file)\n",
+    "  with open(updatedDataNotebookPath, 'w') as f:\n",
+    "    json.dump(notebook, f)\n",
+    "\n",
+    "  return updatedDataNotebookPath\n",
+    "\n",
+    "# 更新变量\n",
+    "replacements = {\n",
+    "  'Model_Version': 'V2.1-768px',\n",
+    "  'Session_Name': 'FuXingHao768',\n",
+    "  'Crop_size': 768\n",
+    "}\n",
+    "\n",
+    "# 更新变量\n",
+    "updatedDataNotebookPath=update_ipynb_vars(newNotebookPath, replacements)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "962ba25c-f71f-479a-a8a8-76d11f81d5e8",
+   "metadata": {},
+   "source": [
+    "# 检查最终版本的ipynb里面的赋值情况"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "cdea68b7-983a-4341-8fed-a2ac19e8fffb",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-12-12T14:07:34.658291Z",
+     "iopub.status.busy": "2022-12-12T14:07:34.657945Z",
+     "iopub.status.idle": "2022-12-12T14:07:34.664065Z",
+     "shell.execute_reply": "2022-12-12T14:07:34.663661Z",
+     "shell.execute_reply.started": "2022-12-12T14:07:34.658274Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model_Version: \"V2.1-768px\" #@param [ \"1.5\", \"V2.1-512px\", \"V2.1-768px\"]\n",
       "Huggingface_Token: \"\" #@param {type:\"string\"}\n",
       "token: Huggingface_Token\n",
       "Custom_Model_Version: \"1.5\" #@param [ \"1.5\", \"V2.1-512px\", \"V2.1-768px\"]\n",
@@ -274,7 +334,7 @@
       "MODEL_NAME: \"/openbayes/home/content/stable-diffusion-v2-768\"\n",
       "MODEL_NAME: \"\"\n",
       "PT: \"\"\n",
-      "Session_Name: \"\" #@param{type: \"string\"}\n",
+      "Session_Name: \"FuXingHao768\" #@param{type: \"string\"}\n",
       "Session_Name: input('')\n",
       "Session_Name: Session_Name.replace(\" \",\"_\")\n",
       "Session_Link_optional: \"\" #@param{type: \"string\"}\n",
@@ -287,7 +347,7 @@
       "INSTANCE_DIR: SESSION_DIR+'/instance_images'\n",
       "CONCEPT_DIR: SESSION_DIR+'/concept_images'\n",
       "MDLPTH: str(SESSION_DIR+\"/\"+Session_Name+'.ckpt')\n",
-      "Model_Version: \"1.5\" #@param [ \"1.5\", \"V2.1-512px\", \"V2.1-768px\"]\n",
+      "Model_Version: \"V2.1-768px\" #@param [ \"1.5\", \"V2.1-512px\", \"V2.1-768px\"]\n",
       "k: 0\n",
       "k: k+1\n",
       "k: 0\n",
@@ -299,13 +359,13 @@
       "Remove_existing_instance_images: True #@param{type: \"boolean\"}\n",
       "IMAGES_FOLDER_OPTIONAL: \"\" #@param{type: \"string\"}\n",
       "Crop_images: True #@param{type: \"boolean\"}\n",
-      "Crop_size: \"512\" #@param [\"512\", \"576\", \"640\", \"704\", \"768\", \"832\", \"896\", \"960\", \"1024\"]\n",
+      "Crop_size: 768 #@param [\"512\", \"576\", \"640\", \"704\", \"768\", \"832\", \"896\", \"960\", \"1024\"]\n",
       "Crop_size: int(Crop_size)\n",
       "while IMAGES_FOLDER_OPTIONAL !: \"\" and not os.path.exists(str(IMAGES_FOLDER_OPTIONAL)):\n",
       "IMAGES_FOLDER_OPTIONAL: input('')\n",
       "if IMAGES_FOLDER_OPTIONAL!: \"\":\n",
       "for filename in tqdm(os.listdir(IMAGES_FOLDER_OPTIONAL), bar_format: '  |{bar:15}| {n_fmt}/{total_fmt} Uploaded'):\n",
-      "extension: filename.split(\".\")[1]\n",
+      "extension: filename.split(\".\")[-1]\n",
       "identifier: filename.split(\".\")[0]\n",
       "new_path_with_file: os.path.join(INSTANCE_DIR, filename)\n",
       "file: Image.open(IMAGES_FOLDER_OPTIONAL+\"/\"+filename)\n",
@@ -322,7 +382,7 @@
       "for filename in tqdm(os.listdir(IMAGES_FOLDER_OPTIONAL), bar_format: '  |{bar:15}| {n_fmt}/{total_fmt} Uploaded'):\n",
       "uploaded: files.upload()\n",
       "for filename in tqdm(uploaded.keys(), bar_format: '  |{bar:15}| {n_fmt}/{total_fmt} Uploaded'):\n",
-      "extension: filename.split(\".\")[1]\n",
+      "extension: filename.split(\".\")[-1]\n",
       "identifier: filename.split(\".\")[0]\n",
       "new_path_with_file: os.path.join(INSTANCE_DIR, filename)\n",
       "file: Image.open(new_path_with_file)\n",
@@ -340,13 +400,13 @@
       "Remove_existing_concept_images: True #@param{type: \"boolean\"}\n",
       "IMAGES_FOLDER_OPTIONAL: \"\" #@param{type: \"string\"}\n",
       "Crop_images: True\n",
-      "Crop_size: \"512\"\n",
+      "Crop_size: 768 None\n",
       "Crop_size: int(Crop_size)\n",
       "while IMAGES_FOLDER_OPTIONAL !: \"\" and not os.path.exists(str(IMAGES_FOLDER_OPTIONAL)):\n",
       "IMAGES_FOLDER_OPTIONAL: input('')\n",
       "if IMAGES_FOLDER_OPTIONAL!: \"\":\n",
       "for filename in tqdm(os.listdir(IMAGES_FOLDER_OPTIONAL), bar_format: '  |{bar:15}| {n_fmt}/{total_fmt} Uploaded'):\n",
-      "extension: filename.split(\".\")[1]\n",
+      "extension: filename.split(\".\")[-1]\n",
       "identifier: filename.split(\".\")[0]\n",
       "new_path_with_file: os.path.join(CONCEPT_DIR, filename)\n",
       "file: Image.open(IMAGES_FOLDER_OPTIONAL+\"/\"+filename)\n",
@@ -363,7 +423,7 @@
       "for filename in tqdm(os.listdir(IMAGES_FOLDER_OPTIONAL), bar_format: '  |{bar:15}| {n_fmt}/{total_fmt} Uploaded'):\n",
       "uploaded: files.upload()\n",
       "for filename in tqdm(uploaded.keys(), bar_format: '  |{bar:15}| {n_fmt}/{total_fmt} Uploaded'):\n",
-      "extension: filename.split(\".\")[1]\n",
+      "extension: filename.split(\".\")[-1]\n",
       "identifier: filename.split(\".\")[0]\n",
       "new_path_with_file: os.path.join(CONCEPT_DIR, filename)\n",
       "file: Image.open(new_path_with_file)\n",
@@ -379,7 +439,7 @@
       "image.save(new_path_with_file, format: extension.upper())\n",
       "for filename in tqdm(uploaded.keys(), bar_format: '  |{bar:15}| {n_fmt}/{total_fmt} Uploaded'):\n",
       "i: 0\n",
-      "extension: filename.split(\".\")[1]\n",
+      "extension: filename.split(\".\")[-1]\n",
       "identifier: filename.split(\".\")[0]\n",
       "new_path_with_file: os.path.join(CONCEPT_DIR, \"conceptimagedb\"+str(i)+\".\"+extension)\n",
       "filepath: os.path.join(CONCEPT_DIR,filename)\n",
@@ -470,7 +530,7 @@
       "train_only_unet(stpsv, stp, SESSION_DIR, MODELT_NAME, INSTANCE_DIR, OUTPUT_DIR, PT, Seed, Res, precision, Training_Steps: UNet_Training_Steps)\n",
       "!sed -i '201s@.*@    model_path: \"{OUTPUT_DIR}\"@' /openbayes/home/content/convertosd.py\n",
       "!sed -i '202s@.*@    checkpoint_path: \"{SESSION_DIR}/{Session_Name}.ckpt\"@' /openbayes/home/content/convertosd.py\n",
-      "Model_Version: \"1.5\" #@param [\"1.5\", \"V2.1-512\", \"V2.1-768\"]\n",
+      "Model_Version: \"V2.1-768px\" #@param [\"1.5\", \"V2.1-512\", \"V2.1-768\"]\n",
       "Update_repo: True #@param {type:\"boolean\"}\n",
       "Session__Name: \"\" #@param{type: \"string\"}\n",
       "Use_Custom_Path: False #@param {type:\"boolean\"}\n",
@@ -609,7 +669,7 @@
     "                    value = parts[1].strip()\n",
     "                    print(f'{var_name}: {value}')\n",
     "\n",
-    "detect_constant_assignments(newNotebookPath)\n"
+    "detect_constant_assignments(updatedDataNotebookPath)\n"
    ]
   },
   {
@@ -623,7 +683,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -638,6 +698,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "949777d72b0d2535278d3dc13498b2535136f6dfe0678499012e853ee9abcab1"
+   }
   }
  },
  "nbformat": 4,
