--- a/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -1,16 +1,68 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "8bbdb2c9-4ce6-4ffd-92d7-6ebd91771f91",
+   "metadata": {},
+   "source": [
+    "# Colab的默认环境跟这里的默认环境有差异，需要安装额外的依赖"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
+   "id": "ba9fae5b-6950-407b-bf57-be286109579b",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-12-12T15:54:37.529524Z",
+     "iopub.status.busy": "2022-12-12T15:54:37.529098Z",
+     "iopub.status.idle": "2022-12-12T15:54:40.289042Z",
+     "shell.execute_reply": "2022-12-12T15:54:40.288445Z",
+     "shell.execute_reply.started": "2022-12-12T15:54:37.529484Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading package lists... Done\n",
+      "Building dependency tree       \n",
+      "Reading state information... Done\n",
+      "The following NEW packages will be installed:\n",
+      "  git-lfs\n",
+      "0 upgraded, 1 newly installed, 0 to remove and 94 not upgraded.\n",
+      "Need to get 2129 kB of archives.\n",
+      "After this operation, 7662 kB of additional disk space will be used.\n",
+      "Get:1 http://mirrors.tuna.tsinghua.edu.cn/ubuntu bionic/universe amd64 git-lfs amd64 2.3.4-1 [2129 kB]\n",
+      "Fetched 2129 kB in 0s (5726 kB/s)\n",
+      "debconf: unable to initialize frontend: Dialog\n",
+      "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 76, <> line 1.)\n",
+      "debconf: falling back to frontend: Readline\n",
+      "Selecting previously unselected package git-lfs.\n",
+      "(Reading database ... 52279 files and directories currently installed.)\n",
+      "Preparing to unpack .../git-lfs_2.3.4-1_amd64.deb ...\n",
+      "Unpacking git-lfs (2.3.4-1) ...\n",
+      "Setting up git-lfs (2.3.4-1) ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "!apt-get install git-lfs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "f43a26af-ea59-43a1-b3a4-d7b24c366367",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-12T10:08:38.107735Z",
-     "iopub.status.busy": "2022-12-12T10:08:38.107439Z",
-     "iopub.status.idle": "2022-12-12T10:08:39.706172Z",
-     "shell.execute_reply": "2022-12-12T10:08:39.705726Z",
-     "shell.execute_reply.started": "2022-12-12T10:08:38.107695Z"
+     "iopub.execute_input": "2022-12-12T16:25:07.379190Z",
+     "iopub.status.busy": "2022-12-12T16:25:07.378811Z",
+     "iopub.status.idle": "2022-12-12T16:25:22.500767Z",
+     "shell.execute_reply": "2022-12-12T16:25:22.499494Z",
+     "shell.execute_reply.started": "2022-12-12T16:25:07.379152Z"
     },
     "tags": []
    },
@@ -22,12 +74,67 @@
       "Looking in indexes: https://pypi.tuna.tsinghua.edu.cn/simple\n",
       "Requirement already satisfied: wget in /usr/local/lib/python3.8/site-packages (3.2)\n",
       "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0m"
+      "\u001b[0mLooking in indexes: https://pypi.tuna.tsinghua.edu.cn/simple\n",
+      "Requirement already satisfied: transformers in /usr/local/lib/python3.8/site-packages (4.25.1)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.8/site-packages (from transformers) (6.0)\n",
+      "Requirement already satisfied: huggingface-hub<1.0,>=0.10.0 in /usr/local/lib/python3.8/site-packages (from transformers) (0.11.1)\n",
+      "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.8/site-packages (from transformers) (21.3)\n",
+      "Requirement already satisfied: filelock in /usr/local/lib/python3.8/site-packages (from transformers) (3.8.2)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.8/site-packages (from transformers) (2022.10.31)\n",
+      "Requirement already satisfied: requests in /usr/local/lib/python3.8/site-packages (from transformers) (2.28.1)\n",
+      "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.8/site-packages (from transformers) (4.64.0)\n",
+      "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.8/site-packages (from transformers) (1.23.4)\n",
+      "Requirement already satisfied: tokenizers!=0.11.3,<0.14,>=0.11.1 in /usr/local/lib/python3.8/site-packages (from transformers) (0.13.2)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.8/site-packages (from huggingface-hub<1.0,>=0.10.0->transformers) (4.4.0)\n",
+      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /usr/local/lib/python3.8/site-packages (from packaging>=20.0->transformers) (3.0.9)\n",
+      "Requirement already satisfied: charset-normalizer<3,>=2 in /usr/local/lib/python3.8/site-packages (from requests->transformers) (2.0.4)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.8/site-packages (from requests->transformers) (2022.6.15)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.8/site-packages (from requests->transformers) (3.3)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.8/site-packages (from requests->transformers) (1.26.11)\n",
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+      "\u001b[0mLooking in indexes: https://pypi.tuna.tsinghua.edu.cn/simple\n",
+      "Requirement already satisfied: bitsandbytes in /usr/local/lib/python3.8/site-packages (0.35.4)\n",
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+      "\u001b[0mLooking in indexes: https://pypi.tuna.tsinghua.edu.cn/simple\n",
+      "Collecting jax\n",
+      "  Downloading https://pypi.tuna.tsinghua.edu.cn/packages/4b/0e/c57d1b4c9ddc27e8498c9e2b0628666c11d9d6911f1d2f975a91e1215595/jax-0.3.25.tar.gz (1.1 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.1/1.1 MB\u001b[0m \u001b[31m2.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0mm\n",
+      "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hRequirement already satisfied: numpy>=1.20 in /usr/local/lib/python3.8/site-packages (from jax) (1.23.4)\n",
+      "Collecting opt_einsum\n",
+      "  Downloading https://pypi.tuna.tsinghua.edu.cn/packages/bc/19/404708a7e54ad2798907210462fd950c3442ea51acc8790f3da48d2bee8b/opt_einsum-3.3.0-py3-none-any.whl (65 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m65.5/65.5 kB\u001b[0m \u001b[31m38.1 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: scipy>=1.5 in /usr/local/lib/python3.8/site-packages (from jax) (1.9.0)\n",
+      "Requirement already satisfied: typing_extensions in /usr/local/lib/python3.8/site-packages (from jax) (4.4.0)\n",
+      "Building wheels for collected packages: jax\n",
+      "  Building wheel for jax (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for jax: filename=jax-0.3.25-py3-none-any.whl size=1308495 sha256=386cd1ae3be8471249cf179b2cb08193e7f22d3bf79b784ec3667c646b3439a4\n",
+      "  Stored in directory: /root/.cache/pip/wheels/ab/b9/18/0f42bd0c697d360a5f3a4bdfd3fd88d0c9e1f1cfd86b5f8caf\n",
+      "Successfully built jax\n",
+      "Installing collected packages: opt_einsum, jax\n",
+      "Successfully installed jax-0.3.25 opt_einsum-3.3.0\n",
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+      "Hit:1 http://mirrors.tuna.tsinghua.edu.cn/ubuntu bionic InRelease\n",
+      "Hit:2 https://deb.nodesource.com/node_14.x bionic InRelease                    \n",
+      "Hit:3 http://mirrors.tuna.tsinghua.edu.cn/ubuntu bionic-backports InRelease    \n",
+      "Hit:4 http://mirrors.tuna.tsinghua.edu.cn/ubuntu bionic-updates InRelease      \n",
+      "Hit:5 http://mirrors.tuna.tsinghua.edu.cn/ubuntu bionic-security InRelease     \n",
+      "Reading package lists... Done                                                  \n",
+      "Reading package lists... Done\n",
+      "Building dependency tree       \n",
+      "Reading state information... Done\n",
+      "p7zip-full is already the newest version (16.02+dfsg-6).\n",
+      "0 upgraded, 0 newly installed, 0 to remove and 94 not upgraded.\n"
      ]
     }
    ],
    "source": [
-    "!pip install wget"
+    "!pip install wget\n",
+    "!pip install transformers\n",
+    "!pip install bitsandbytes\n",
+    "!pip install jax\n",
+    "!apt-get update\n",
+    "!apt-get install -y p7zip-full\n"
    ]
   },
   {
@@ -47,15 +154,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "875e96c2-0706-4e04-813c-bf4a02a40017",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-12T10:41:31.640832Z",
-     "iopub.status.busy": "2022-12-12T10:41:31.640493Z",
-     "iopub.status.idle": "2022-12-12T10:41:31.912026Z",
-     "shell.execute_reply": "2022-12-12T10:41:31.911596Z",
-     "shell.execute_reply.started": "2022-12-12T10:41:31.640811Z"
+     "iopub.execute_input": "2022-12-12T16:43:53.331938Z",
+     "iopub.status.busy": "2022-12-12T16:43:53.331673Z",
+     "iopub.status.idle": "2022-12-12T16:43:53.997204Z",
+     "shell.execute_reply": "2022-12-12T16:43:53.996632Z",
+     "shell.execute_reply.started": "2022-12-12T16:43:53.331918Z"
     },
     "tags": []
    },
@@ -111,15 +218,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "73aec890-1745-4f77-b3bc-af98d1726554",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-12T14:05:10.071819Z",
-     "iopub.status.busy": "2022-12-12T14:05:10.071348Z",
-     "iopub.status.idle": "2022-12-12T14:05:10.080367Z",
-     "shell.execute_reply": "2022-12-12T14:05:10.079919Z",
-     "shell.execute_reply.started": "2022-12-12T14:05:10.071799Z"
+     "iopub.execute_input": "2022-12-12T16:53:13.747901Z",
+     "iopub.status.busy": "2022-12-12T16:53:13.747640Z",
+     "iopub.status.idle": "2022-12-12T16:53:13.759090Z",
+     "shell.execute_reply": "2022-12-12T16:53:13.758632Z",
+     "shell.execute_reply.started": "2022-12-12T16:53:13.747877Z"
     },
     "tags": []
    },
@@ -168,7 +275,19 @@
     "                # 添加一个条件判断，只有当该行不是网址路径时才进行替换\n",
     "                if not line.startswith((\"http\", \"https\")):\n",
     "                    cell[\"source\"][i] = line.replace(old_root, new_root)\n",
-    "\n",
+    "                # 把引入google.colab的库的代码行标注为注释\n",
+    "                if \"google.colab\" in line:\n",
+    "                    cell[\"source\"][i] = \"# \" + line\n",
+    "                # 把使用google drive盘挂载的代码行标注为注释\n",
+    "                if \"drive.mount\" in line:\n",
+    "                    cell[\"source\"][i] = \"# \" + line\n",
+    "                \n",
+    "                # # 原始字符串\n",
+    "                # original = \"!cp -r /openbayes/home/content/usr/local/lib/python3.8/dist-packages /usr/local/lib/python3.8/\"\n",
+    "                # if original in line:\n",
+    "                #     # 替换python路径\n",
+    "                #     cell[\"source\"][i] = re.sub(r'/usr/local/lib/python3.8/', '/usr/local/lib/python/', original)\n",
+    "                    \n",
     "    # 替换@param{type: 'xxx'}中的单引号为双引号\n",
     "    for cell in nb[\"cells\"]:\n",
     "        if cell[\"cell_type\"] == \"code\":\n",
@@ -205,33 +324,15 @@
    "id": "1f98c0df-b75b-4bf3-ad0f-7181fd4f87f1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-12T14:08:11.254272Z",
-     "iopub.status.busy": "2022-12-12T14:08:11.253997Z",
-     "iopub.status.idle": "2022-12-12T14:08:11.261991Z",
-     "shell.execute_reply": "2022-12-12T14:08:11.261526Z",
-     "shell.execute_reply.started": "2022-12-12T14:08:11.254253Z"
+     "iopub.execute_input": "2022-12-12T16:53:16.032081Z",
+     "iopub.status.busy": "2022-12-12T16:53:16.031825Z",
+     "iopub.status.idle": "2022-12-12T16:53:16.044002Z",
+     "shell.execute_reply": "2022-12-12T16:53:16.043559Z",
+     "shell.execute_reply.started": "2022-12-12T16:53:16.032060Z"
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "#@param [ \"1.5\", \"V2.1-512px\", \"V2.1-768px\"]\n",
-      "\n",
-      "#@param{type: \"string\"}\n",
-      "\n",
-      "#@param [ \"1.5\", \"V2.1-512px\", \"V2.1-768px\"]\n",
-      "\n",
-      "#@param [\"512\", \"576\", \"640\", \"704\", \"768\", \"832\", \"896\", \"960\", \"1024\"]\n",
-      "\n",
-      "None\n",
-      "#@param [\"1.5\", \"V2.1-512\", \"V2.1-768\"]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "\n",
@@ -276,7 +377,11 @@
     "replacements = {\n",
     "  'Model_Version': 'V2.1-768px',\n",
     "  'Session_Name': 'FuXingHao768',\n",
-    "  'Crop_size': 768\n",
+    "  'Crop_size': 768,\n",
+    "  'Remove_existing_instance_images': False,\n",
+    "  'IMAGES_FOLDER_OPTIONAL':\"/openbayes/home/content/gdrive/MyDrive/Fast-Dreambooth/Sessions/FuXingHao768/instance_images\",\n",
+    "  'Crop_images':False,\n",
+    "  'Resolution': 768,\n",
     "}\n",
     "\n",
     "# 更新变量\n",
@@ -293,15 +398,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "cdea68b7-983a-4341-8fed-a2ac19e8fffb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-12T14:07:34.658291Z",
-     "iopub.status.busy": "2022-12-12T14:07:34.657945Z",
-     "iopub.status.idle": "2022-12-12T14:07:34.664065Z",
-     "shell.execute_reply": "2022-12-12T14:07:34.663661Z",
-     "shell.execute_reply.started": "2022-12-12T14:07:34.658274Z"
+     "iopub.execute_input": "2022-12-12T16:44:00.431905Z",
+     "iopub.status.busy": "2022-12-12T16:44:00.431656Z",
+     "iopub.status.idle": "2022-12-12T16:44:00.438783Z",
+     "shell.execute_reply": "2022-12-12T16:44:00.438152Z",
+     "shell.execute_reply.started": "2022-12-12T16:44:00.431886Z"
     },
     "tags": []
    },
@@ -459,7 +564,7 @@
       "Style_Training: False #@param {type:\"boolean\"}\n",
       "Style: \"\"\n",
       "Style: \"--Style\"\n",
-      "Resolution: \"512\" #@param [\"512\", \"576\", \"640\", \"704\", \"768\", \"832\", \"896\", \"960\", \"1024\"]\n",
+      "Resolution: 768 #@param [\"512\", \"576\", \"640\", \"704\", \"768\", \"832\", \"896\", \"960\", \"1024\"]\n",
       "Res: int(Resolution)\n",
       "#@markdown - Higher resolution: Higher quality, make sure the instance images are cropped to this selected size (or larger).\n",
       "fp16: True\n",
@@ -683,7 +788,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
